--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
-*.class
 
-# Mobile Tools for Java (J2ME)
+hs_err_pid*
 .mtj.tmp/
 
-# Package Files #
+*.class
 *.jar
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+dist
+target
+.idea
+*.iml
+*.log
+.classpath
+.project
+.settings
+.tmp
+.merge_file*
+.DS_Store
