--- a/framework/core/pom.xml
+++ b/framework/core/pom.xml
@@ -75,6 +75,16 @@
         </dependency>
         <!-- springframework end -->
 
+
+        <!-- Logging begin -->
+        <dependency>
+            <groupId>org.lazyluke</groupId>
+            <artifactId>log4jdbc-remix</artifactId>
+            <version>0.2.7</version>
+        </dependency>
+        <!-- Logging end -->
+
+
         <!-- GENERAL UTILS begin -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -116,6 +126,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.connector.version}</version>
         </dependency>
+        <!-- database -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+
 
         <!-- mybatis -->
         <dependency>
