--- a/framework/parent/pom.xml
+++ b/framework/parent/pom.xml
@@ -2,6 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <groupId>org.mass</groupId>
     <artifactId>mass-parent</artifactId>
     <version>1.0.0</version>
@@ -10,11 +17,11 @@
     <packaging>pom</packaging>
 
     <properties>
-        <binf.version>1.0.0</binf.version>
+        <mass.version>1.0.0</mass.version>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <spring.version>4.1.3.RELEASE</spring.version>
+        <spring.version>3.2.2.RELEASE</spring.version>
         <aspectj.version>1.7.0</aspectj.version>
         <mybatis.version>3.2.7</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>
@@ -23,7 +30,9 @@
         <quartz.version>2.2.1</quartz.version>
         <slf4j.version>1.7.8</slf4j.version>
         <httpclient.version>4.3.6</httpclient.version>
+        <commons-lang.version>2.4</commons-lang.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-beanutils.version>1.8.3</commons-beanutils.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
@@ -37,9 +46,14 @@
         <joda-time.version>2.3</joda-time.version>
         <freemarker.version>2.3.21</freemarker.version>
         <lucene.version>2.1.0</lucene.version>
+        <ckeditor.version>3.5.3</ckeditor.version>
+        <ckfinder.version>2.0.2</ckfinder.version>
+        <json-lib.version>2.4</json-lib.version>
+        <org-json.version>20140107</org-json.version>
         <jackson.version>2.4.4</jackson.version>
         <fastjson.version>1.2.5</fastjson.version>
         <dom4j.version>1.6.1</dom4j.version>
+        <jmagick.version>6.2.4</jmagick.version>
         <junit.version>4.11</junit.version>
         <jetty.version>8.1.16.v20140903</jetty.version>
         <h2.version>1.3.176</h2.version>
@@ -97,6 +111,8 @@
                     </webAppConfig>
                 </configuration>
             </plugin>
+
+
             <!-- tomcat  -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
@@ -109,18 +125,38 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.4</version>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
                 <includes>
                     <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                    <include>**/*.java</include>
+                    <include>**/*.jsp</include>
                 </includes>
-                <filtering>true</filtering>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
             </resource>
         </resources>
     </build>
