--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
-	<!--
-	<parent>
-		<groupId>io.springside</groupId>
-		<artifactId>springside-parent</artifactId>
-		<version>4.3.0-SNAPSHOT</version>
-		<relativePath>../binf-framework/parent</relativePath>
-	</parent>-->
 	<groupId>org.mass</groupId>
-	<artifactId>mass-framework</artifactId>
-	<name>mass-framework</name>
+	<artifactId>framework</artifactId>
+	<name>framework</name>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
+
 	<modules>
 		<module>parent</module>
+		<module>spring</module>
+		<module>common</module>
 		<module>core</module>
+		<module>org</module>
+		<module>redis</module>
+		<module>generator</module>
 	</modules>
+
 
 </project>
